fix: visible credits for background

--- a/style/output.css
+++ b/style/output.css
@@ -558,6 +558,10 @@ video {
   left: 0px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
